--- a/chatclient/src/index.css
+++ b/chatclient/src/index.css
@@ -1,7 +1,9 @@
-/* :root {
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  /* height: 100vh; */
+  /* width: 100vw; */
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -11,15 +13,15 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-} */
+}
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
-  background-color: bisque;
+  background-color: rgb(255, 255, 255);
 }
 
 h1 {
